# workman

./: .gitignore  .specwright.yaml  README.md  audit_plans.py  pm.fields.yaml  pyproject.toml
.aip_artifacts/: execution_history.jsonl
.claude/: TASK.md
.claude/commands/: README.md  spec-next.md  spec-pause.md  spec-run.md  spec-status.md
.specwright/: GUIDE.md
.specwright/runs/AIP-repo-2026-01-05-001/2026-01-06T00-04-54/step-001/: gate.md  result.json  sep.yaml  step.summary.json
.specwright/runs/AIP-repo-2026-01-05-001/2026-01-06T00-05-06/step-001/: result.json  sep.yaml  step.summary.json
src/workman/: __init__.py  assertions.py  builders.py  catalog.py  compile.py  errors.py  execute.py  ids.py  intent.py  schema.py
tests/: __init__.py  conftest.py  test_acceptance.py  test_artifacts.py  test_assertions.py  test_catalog.py  test_compile.py  test_execute.py  test_ids.py  test_intent.py  test_links.py  test_opsstream.py  test_primitives.py  test_schema.py  test_updates.py
